<resources>
    <string name="app_name">ContactDemo</string>
    <string name="phone_number">Phone Number</string>
    <string name="contact_name">Contact Name</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="enter_name">Enter Name</string>
    <string name="add">Add</string>
    <string name="desc">Desc</string>
    <string name="asc">Asc</string>
    <string name="find">Find</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="textview">TextView</string>
    <string name="trashcan">TrashCan</string>

</resources>